# similarity

./: .env.example  .gitignore  README.md  docker-compose.yaml  env.example  pyproject.toml  run.py
js/: README.md  base_crawler.js  metabase_crawler.js  metabase_glossary_crawler.js  package.json  run_crawler.js
reports/: duplicate_issues_report.md
scripts/: batch_manager.py  batch_monitor_worker.py  cleanup_openai_files.py  efficient_batch_processor.py  find_duplicates.py  llm_processor.py  manage_batch_files.py  manage_db.py  manage_embeddings.py  manage_keywords.py  manage_local_batch_files.py  monitor_worker.py  path_setup.py  populate_database.py  process_embeddings.py  run_efficient_batches.py  update_batch_file_paths.py
src/: api.py  api_utils.py  batch_processor.py  constants.py  db.py  embedding_client.py  embedding_service.py  keyword_service.py  llm_analyzer.py  llm_client.py  models.py  prompts.py  reranker_client.py  reranker_service.py  security.py  semantic_analyzer.py  settings.py  similarity_query_builder.py  text_utils.py  utils.py
